@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	No xml declaration and no namespace declaration for srcml2src.
+
 	Finish no namespace declaration for src2srcml.
 
 	Expose info and longinfo options for srcml2src.
